--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,11 @@
       content="Split your total expenses and see the balance of each of your friends"
     />
 
+    <!-- <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    /> -->
+
     <title>Expense-Splitter</title>
   </head>
   <body>
