added delete function, optimated code, better opening layout

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,10 @@
       content="Split your total expenses and see the balance of each of your friends"
     />
 
-    <!-- <link
+    <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
-    /> -->
+      href="path/to/font-awesome/css/font-awesome.min.css"
+    />
 
     <title>Expense-Splitter</title>
   </head>
