--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Expense-Splitter"
+      name="Expenses-Splitter"
       content="Split your total expenses and see the balance of each of your friends"
     />
 
